Rewrite the rest of backend and update swagger
