# backend/api/routes/auth.js
@@ -2,36 +2,37 @@ const router = require("express").Router();
 const jwt = require("jsonwebtoken");
 const db = require("../db");
 
-const ACCESS_TOKEN_SECRET =
-  process.env.ACCESS_TOKEN_SECRET || "FeedTrackAccessToken";
-const REFRESH_TOKEN_SECRET =
-  process.env.REFRESH_TOKEN_SECRET || "FeedTrackRefreshToken";
-
 let refreshTokens = [];
 
 router.post("/token", (req, res) => {
   const { refreshToken } = req.body;
 
   if (!refreshToken) {
-    return res.status(401).json("You are not authenticated!");
+    return res.status(401).json({ message: "You are not authenticated!" });
   }
 
   if (!refreshTokens.includes(refreshToken)) {
-    return res.status(403).json("Token is not valid!");
+    return res.status(403).json({ message: "Token is not valid!" });
   }
 
-  jwt.verify(refreshToken, REFRESH_TOKEN_SECRET, (err, userData) => {
-    if (err) return res.sendStatus(403);
+  jwt.verify(
+    refreshToken,
+    process.env.REFRESH_TOKEN_SECRET,
+    (err, userData) => {
+      if (err) {
+        return res.status(403).json({ message: "Token is not valid!" });
+      }
 
-    const user = {
-      id: userData.id,
-      username: userData.username,
-      email: userData.email,
-    };
-    const accessToken = generateAccessToken(user);
+      const user = {
+        id: userData.id,
+        username: userData.username,
+        email: userData.email,
+      };
+      const accessToken = generateAccessToken(user);
 
-    res.status(200).json({ accessToken });
-  });
+      res.status(200).json({ accessToken });
+    }
+  );
 });
 
 router.post("/login", async (req, res) => {
@@ -65,11 +66,11 @@ router.post("/logout", (req, res) => {
   const { refreshToken } = req.body;
 
   if (!refreshToken) {
-    return res.status(401).json("You are not authenticated!");
+    return res.status(401).json({ message: "You are not authenticated!" });
   }
 
   if (!refreshTokens.includes(refreshToken)) {
-    return res.status(403).json("Token is not valid!");
+    return res.status(403).json({ message: "Token is not valid!" });
   }
 
   refreshTokens = refreshTokens.filter((token) => token !== refreshToken);
@@ -78,13 +79,13 @@ router.post("/logout", (req, res) => {
 });
 
 function generateAccessToken(user) {
-  return jwt.sign(user, ACCESS_TOKEN_SECRET, {
+  return jwt.sign(user, process.env.ACCESS_TOKEN_SECRET, {
     expiresIn: "30m",
   });
 }
 
 function generateRefreshToken(user) {
-  return jwt.sign(user, REFRESH_TOKEN_SECRET);
+  return jwt.sign(user, process.env.REFRESH_TOKEN_SECRET);
 }
 
 module.exports = router;
